--- a/src/App.scss
+++ b/src/App.scss
@@ -63,7 +63,7 @@ body, textarea {
   resize: none;
   width: 100%;
   height: calc(100% - #{$label-height});
-  padding: 1rem;
+  padding: 2rem;
   border: none;
   background-color: $background-color;
   overflow: scroll;
@@ -100,17 +100,36 @@ body, textarea {
       color: $secondary-color;
     }
 
-    h1, h2, h3, p, pre, ul, ol, table, blockquote {
-      margin-bottom: 1.6rem;
+    h1, h2, h3,{
+      margin-bottom: 2rem;
+    }
+
+    p, pre, ul, ol, table, blockquote, hr {
+      margin-bottom: 2rem;
+    }
+
+    h1, h2 {
+      display: inline-block;
+      background-color: $background-color-darkened;
+      padding: 1rem;
     }
 
     ul, ol, li {
       margin-left: 1rem;
     }
 
+    li, li > ul {
+      margin-top: .5rem;
+      margin-bottom: .5rem;
+    }
+
     th, td {
       border: .1rem solid $primary-color;
       padding: 1rem;
+    }
+
+    hr {
+      border: .1rem solid $secondary-color;
     }
 
     code {
@@ -126,7 +145,7 @@ body, textarea {
     }
 
     img {
-      width: 100%;
+      max-width: 40%;
       height: auto;
     }
   }
